crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__compile_both_script_blocks.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"

import type { RouteLocation } from "vue-router";


interface TabItem {
  name: string;
  label: string;
}

export type { TabItem };

export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  props: {
    items: { type: Array, required: true }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(__props.items, (item) => {
    return (_openBlock(), _createElementBlock("div", { key: item.name }, _toDisplayString(item.label), 1 /* TEXT */))
  }), 128 /* KEYED_FRAGMENT */))
}
}

})
