crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__compile_both_script_blocks_exposes_normal_script_bindings_to_template.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"

import { ref } from "vue";


const dragging = ref(false);
let dropCallback = null;

function resetDragging() {
  dragging.value = false;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  setup(__props) {

const items = [{ id: "a" }];
function start() {
  dragging.value = true;
  dropCallback = resetDragging;
}

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", {
    class: _normalizeClass({ dragging: dragging.value })
  }, [
    (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(items, (item) => {
      return (_openBlock(), _createElementBlock("button", {
        key: item.id,
        onClick: start
      }, _toDisplayString(item.id), 1 /* TEXT */))
    }), 128 /* KEYED_FRAGMENT */))
  ], 2 /* CLASS */))
}
}

})
