crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__define_model_with_name.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { useModel as _useModel } from 'vue'
import { vModelText as _vModelText, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default {
  __name: 'anonymous',
  props: {
    "title": {},
    "titleModifiers": {},
  },
  emits: ["update:title"],
  setup(__props) {

const title = _useModel(__props, "title")

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
    "onUpdate:modelValue": _cache[0] || (_cache[0] = $event => ((title).value = $event))
  }, null, 512 /* NEED_PATCH */)), [
    [_vModelText, title.value]
  ])
}
}

}
