crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__define_props_imported_type_alias_is_exposed_to_template.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { renderSlot as _renderSlot, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
export default {
  __name: "ImportedSelectBase",
  props: {
    disabled: {
      type: Boolean,
      required: false
    },
    size: {
      type: null,
      required: false,
      default: "md"
    }
  },
  setup(__props) {
    const props = __props;
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("select", {
        class: _normalizeClass(__props.size),
        disabled: __props.disabled ? true : undefined
      }, [_renderSlot(_ctx.$slots, "default")], 10, ["disabled"]);
    };
  }
};
