crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__define_props_interface_extends_imported_type_alias.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { useModel as _useModel } from "vue";
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, renderList as _renderList, toDisplayString as _toDisplayString, normalizeClass as _normalizeClass, vModelSelect as _vModelSelect } from "vue";
export default {
  __name: "ImportedSelectField",
  props: {
    disabled: {
      type: Boolean,
      required: false
    },
    size: {
      type: null,
      required: false,
      default: "md"
    },
    items: { type: Array },
    "modelValue": {
      type: String,
      ...{ default: undefined }
    }
  },
  emits: ["update:modelValue"],
  setup(__props) {
    const model = _useModel(__props, "modelValue");
    return (_ctx, _cache) => {
      return _withDirectives((_openBlock(), _createElementBlock("select", {
        "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event) => model.value = $event),
        class: _normalizeClass(__props.size),
        disabled: __props.disabled
      }, [(_openBlock(true), _createElementBlock(
        _Fragment,
        null,
        _renderList(__props.items, (item) => {
          return _openBlock(), _createElementBlock("option", {
            key: item.value,
            value: item.value
          }, _toDisplayString(item.label), 9, ["value"]);
        }),
        128
        /* KEYED_FRAGMENT */
      ))], 10, ["disabled"])), [[_vModelSelect, model.value]]);
    };
  }
};
