crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__full_sfc_props_destructure.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
const _hoisted_1 = { class: "card" };
import { computed } from "vue";
export default {
  __name: "test",
  props: {
    name: { type: String },
    count: {
      type: Number,
      required: false,
      default: 0
    }
  },
  setup(__props) {
    const doubled = computed(() => __props.count * 2);
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", _hoisted_1, [_createElementVNode(
        "h2",
        null,
        _toDisplayString(__props.name),
        1
        /* TEXT */
      ), _createElementVNode(
        "p",
        null,
        "Count: " + _toDisplayString(__props.count) + " (doubled: " + _toDisplayString(doubled.value) + ")",
        1
        /* TEXT */
      )]);
    };
  }
};
