crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__inline_component_dynamic_prop_keeps_props_patch_flag.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
const _hoisted_1 = { class: "wrapper" };
import { ref } from "vue";
import CodeHighlight from "./CodeHighlight.vue";
export default {
  __name: "anonymous",
  setup(__props) {
    const currentCode = ref("dom");
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", _hoisted_1, [_createVNode(CodeHighlight, {
        code: currentCode.value,
        language: "javascript"
      }, null, 8, ["code"])]);
    };
  }
};
