crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__inline_template_keeps_patch_flags_for_ref_class_bindings.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { createElementVNode as _createElementVNode, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
import { ref } from "vue";
export default {
  __name: "anonymous",
  setup(__props) {
    const activeTab = ref("a");
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", { class: "tabs" }, [_createElementVNode(
        "button",
        {
          class: _normalizeClass(["tab", { active: activeTab.value === "a" }]),
          onClick: _cache[0] || (_cache[0] = ($event) => activeTab.value = "a")
        },
        "A",
        2
        /* CLASS */
      ), _createElementVNode(
        "button",
        {
          class: _normalizeClass(["tab", { active: activeTab.value === "b" }]),
          onClick: _cache[1] || (_cache[1] = ($event) => activeTab.value = "b")
        },
        "B",
        2
        /* CLASS */
      )]);
    };
  }
};
